results/experiments/11_90_incorrect/1499/2026-04-29_09-17-43/selection/batfish/candidate_1_vs_candidate_3_reachability.txt
--- Analyzing results/experiments/2026-04-29_06-59-06/1499/2026-04-29_09-17-43/candidates: candidate_1 vs candidate_3 ---

[DIFFERENCE DETECTED]
Counter-example Packet (Packet P): start=barcelona [10.0.0.68->100.0.31.0 ICMP (type=8, code=0)]

Trace in Candidate 1 (Permitted):
[((ORIGINATED(default), FORWARDED(Forwarded out interface: FastEthernet0/1 with resolved next-hop IP: 10.0.0.69, Routes: [ospfE2 (Network: 100.0.31.0/24, Next Hop: interface FastEthernet0/1 ip 10.0.0.69)]), TRANSMITTED(FastEthernet0/1)), (RECEIVED(FastEthernet0/1), FORWARDED(Forwarded out interface: FastEthernet1/0 with resolved next-hop IP: 10.0.0.16, Routes: [ospfE2 (Network: 100.0.31.0/24, Next Hop: interface FastEthernet1/0 ip 10.0.0.16)]), TRANSMITTED(FastEthernet1/0)), (RECEIVED(FastEthern [...]

Trace in Candidate 2 (Denied/Different):
[((ORIGINATED(default), NO_ROUTE(Discarded)))]
